# Customer-Support-Voice-Agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
agent/: config.py  main.py
agent/context/: __init__.py  recall.py  router.py  session.py
agent/prompts/: greeting.txt  system.txt
tests/: test_config.py  test_router.py
