[project]
name = "customer-support-voice-agent"
version = "0.1.0"
description = "A customer-support voice agent with a persistent, connected memory graph."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    # Core LiveKit Agents (1.6+) + OpenAI plugin for the componentized
    # STT (Whisper) -> LLM -> TTS pipeline. VAD is bundled into core, and turn
    # detection uses the inference gateway (livekit.agents.inference), so no
    # separate silero / turn-detector plugin extras are needed.
    "livekit-agents[openai]>=1.6.0",
    "neo4j>=5.0",
    "neo4j-graphrag>=1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
